--- a/StudyPortal/Views/Mvc/Delete.cshtml
+++ b/StudyPortal/Views/Mvc/Delete.cshtml
@@ -51,6 +51,14 @@
             @Html.DisplayFor(model => model.OptionD)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Answer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Answer)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
