--- a/StudyPortal/Views/Mvc/Index.cshtml
+++ b/StudyPortal/Views/Mvc/Index.cshtml
@@ -4,11 +4,39 @@
     ViewBag.Title = "Index";
 }
 
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        //$(".flip").click(function () {
+        //    $("#panel").slideToggle("slow");
+        //});
+
+        $('.flip').click(function () {
+            $(this).next('.panel').slideToggle();
+        });//var idCount = 1;
+        //$('div').each(function () {
+        //    $(this).attr('id', 'q' + idCount);
+        //    idCount++;
+        //});
+
+    });
+</script>
 <style>
 
 .question{
 width:75%;
 
+}
+.Panel, .flip {
+    padding: 5px;
+    text-align: center;
+    background-color: #e5eecc;
+    border: solid 1px #c3c3c3;
+}
+
+.panel {
+    padding: 50px;
+    display: none;
 }
 .option
 {}
@@ -19,16 +47,17 @@ width:75%;
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-                      
-                          @foreach (var item in Model) {
+                      @*@{ int counter = 0;
+                          foreach (var item in Model) { 
                       <div class="container" style="margin-top:30px;margin-bottom:30px;border:groove">
 
                           <div class="question">
 
-                              <b>@Html.DisplayNameFor(model => model.Question)</b>
+                              <b>@Html.DisplayNameFor(model => model.Question)</b> @(++counter) :   @Html.DisplayFor(modelItem => item.Question) 
+                              
                           </div>
                           <div>
-                              @Html.DisplayFor(modelItem => item.Question)
+                            
                           </div>
 
                           <div>
@@ -47,12 +76,18 @@ width:75%;
                           <div>
                               <b> @Html.DisplayNameFor(model => model.OptionD) </b> @Html.DisplayFor(modelItem => item.OptionD)
                           </div>
-                           <div>
-                              @Html.ActionLink("View Answer", "#")
-                             </div>
-                      </div>
+                         
+
+
+                          <div class="flip">
+                               View Answer
+                         </div>
+                          <div class="panel"> @Html.DisplayFor(modelItem => item.Answer)</div>
+                               
+                           </div>
+                       
                           }
-                      
+                     }*@ 
 <table class="table">
     <tr>
         <th>
@@ -70,7 +105,14 @@ width:75%;
         <th>
             @Html.DisplayNameFor(model => model.OptionD)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Answer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.category)
+        </th>
+
+ <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -91,6 +133,13 @@ width:75%;
             @Html.DisplayFor(modelItem => item.OptionD)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Answer)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.category)
+        </td>
+
+             <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.MvcId }) |
             @Html.ActionLink("Details", "Details", new { id=item.MvcId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.MvcId })
